@startuml

<style>
    legend {
        FontName Fira Mono
    }
    note {
        FontName Fira Mono
    }
</style>


legend top left
    from datetime import datetime as dt

    ParamRanges = Sequence[Annotated[Sequence[int], 2]]
end legend


hide enum empty members

enum Kind {
    CAT
    DOG
    FOX
    BEAR
    SNAKE
    LIZARD
    TURTLE
    ...
}


class Creature {
    +kind: KindParameters
    +name: str
    +birthdate: dt
    +body: Body
    +mind: Mind
    ..properties..
    +age
    __
    -tick_changes() -> dict
    +apply_tick_changes
    +feed()
    +play()
    +talk()
    +clean()
}
Creature <|-- CreatureActions
Creature::kind o-- KindParameters
Creature -left-o Controller


class CreatureActions {
    +{static}kind_actions: KindActions
    +get_fried()
    +seek_for_honey()
    +be_a_cat()
    +be_a_naughty_cat()
    {method}...
}
note as annotation
    KindActions = dict[Kind, Sequence[Callable]]
end note
CreatureActions::kind_actions .. annotation


class StatesCalculator {
    +last: StatesManager
    -revive_body() -> Body
    -revive_mind() -> Mind
    +revive_creature() -> Creature
    +create_new_creature() -> Creature
}
StatesCalculator::last o-- StatesManager
StatesCalculator --> Creature
StatesCalculator <.. KindParameters


class Body {
    +health: int
    +stamina: int
    +hunger: int
    +thirst: int
    +intestine: int
}
Body --o Creature::body


class Mind {
    #{static}patterns: dict
    +joy: int
    +activity: float
    +anger: int
    +anxiety: float
    ..properties..
    +pattern
    __
}
Mind --o Creature::mind


class BodyState {
    +timestamp: dt
    +health: int
    +stamina: int
    +hunger: int
    +thirst: int
    +intestine: int
    +to_dict()
}


class MindState {
    +anxiety: int
    +activity: int
    +timestamp: dt
    +joy: int
    +anger: int
    +pattern
    +to_dict()
}


class StatesManager {
    +kind: Kind
    +name: str
    +birthdate: dt
    +body_last: BodyState
    +mind_last: MindState
    +to_dict()
}
StatesManager::kind o-- Kind
StatesManager::mind_last o-- MindState
StatesManager::body_history o-- BodyState


class KindParameters {
    +title: str
    +maturity: tuple
    +egg: Ranges
    +cub: Ranges
    +young: Ranges
    +adult: Ranges
    +elder: Ranges
    <i>!!! включить влияния</i>
    <i>и коэффициенты !!!</i>
    +age_ranges() -> Ranges
}
KindParameters *-- "сильная" Ranges


hide Ranges empty methods
class Ranges {
    +health: ParamRanges,
    +stamina: ParamRanges,
    +hunger: ParamRanges,
    +thirst: ParamRanges
}


class PersistenceManager {
    +{static}default_ranges_path: str | Path
    +{static}default_states_path: str | Path
    +{static}read_ranges() -> KindParameters
    +{static}read_states() -> StatesManager
    +{static}write_states()
}
PersistenceManager --> StatesManager
PersistenceManager --> KindParameters


class Controller{
    +data_active_pet: StatesManager
    +active_pet: Creature
    +mainloop()
}

@enduml